tests/snapshots/snapshot_test__search_output.snap
---
source: tests/snapshot_test.rs
expression: sorted
---
"Breakfast/pancakes.cook"
"extensions.cook"
