tests/snapshots/snapshot_test__shopping_list_plain_snapshot.snap
---
source: tests/snapshot_test.rs
expression: stdout
---
garlic 2 cloves
pasta  200 g
water  2 cups
